--- a/404.html
+++ b/404.html
@@ -1,97 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
 
-    <!-- adding font-->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
 
-    <!-- google web fonts-->
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Inter:wght@700;800&display=swap"
-      rel="stylesheet"
-    />
+  <!-- adding font-->
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet" />
 
-    <!-- Customized Boostrap Stylesheet-->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+  <!-- google web fonts-->
+  <!-- Google Web Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Inter:wght@700;800&display=swap"
+    rel="stylesheet" />
 
-    <title>Hire Me</title>
-  </head>
-  <body>
-    <!--side bar-->
-    <div class="sidebar">
-      <h1 class="logo">HireMe</h1>
-      <div class="menu">
-        <a href="index.html"><ion-icon name="home-outline"></ion-icon>Home</a>
-        <a href="404.html"
-          ><ion-icon name="newspaper-outline"></ion-icon>Find Jobs</a
-        >
-        <a href="404.html"
-          ><ion-icon name="stats-chart-outline"></ion-icon>Performance</a
-        >
-        <a href="bookmark.html"
-          ><ion-icon name="bookmarks-outline"></ion-icon>Bookmarks</a
-        >
-        <a href="404.html"
-          ><ion-icon name="mail-unread-outline"></ion-icon>Messages</a
-        >
-        <a href="aboutUs.html"
-          ><ion-icon name="information-circle-outline"></ion-icon>About Us</a
-        >
+  <!-- Customized Boostrap Stylesheet-->
+  <link href="css/bootstrap.min.css" rel="stylesheet" />
+
+  <title>Hire Me</title>
+</head>
+
+<body>
+  <!--side bar-->
+  <div class="sidebar">
+    <h1 class="logo">HireMe</h1>
+    <div class="menu">
+      <a href="index.html"><ion-icon name="home-outline"></ion-icon>Home</a>
+      <a href="404.html"><ion-icon name="newspaper-outline"></ion-icon>Find Jobs</a>
+      <a href="404.html"><ion-icon name="stats-chart-outline"></ion-icon>Performance</a>
+      <a href="bookmark.html"><ion-icon name="bookmarks-outline"></ion-icon>Bookmarks</a>
+      <a href="404.html"><ion-icon name="mail-unread-outline"></ion-icon>Messages</a>
+      <a href="aboutUs.html"><ion-icon name="information-circle-outline"></ion-icon>About Us</a>
+    </div>
+
+    <!-- Adding Profile-->
+    <div class="profile">
+      <img class="profile-img" src="images/woman.png" />
+      <div class="profile-name">
+        <a style="text-decoration: none" href="profile.html">Nur Alfi</a>
+        <p>UI Designer</p>
       </div>
+    </div>
+  </div>
 
-      <!-- Adding Profile-->
-      <div class="profile">
-        <img class="profile-img" src="images/woman.png" />
-        <div class="profile-name">
-            <a style="text-decoration: none"  href="profile.html">Nur Alfi</a>
-          <p>UI Designer</p>
+  <!-- 404 Start -->
+  <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
+    <div class="container text-center">
+      <div class="row justify-content-center">
+        <div class="col-lg-6">
+          <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
+          <h1 class="display-1">404</h1>
+          <h1 class="mb-4">Page Not Found</h1>
+          <p class="mb-4">
+            We’re sorry, the page you have looked for does not exist in our
+            website! Maybe go to our home page or try to use a search?
+          </p>
+          <a class="btn btn-primary py-3 px-5" href="index.html">Go Back To Home</a>
         </div>
       </div>
     </div>
+  </div>
+  <!-- 404 End -->
+</body>
 
-    <!-- 404 Start -->
-    <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
-      <div class="container text-center">
-        <div class="row justify-content-center">
-          <div class="col-lg-6">
-            <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-            <h1 class="display-1">404</h1>
-            <h1 class="mb-4">Page Not Found</h1>
-            <p class="mb-4">
-              We’re sorry, the page you have looked for does not exist in our
-              website! Maybe go to our home page or try to use a search?
-            </p>
-            <a class="btn btn-primary py-3 px-5" href="index.html"
-              >Go Back To Home</a
-            >
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- 404 End -->
-  </body>
+<!-- adding icon -->
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-  <!-- adding icon -->
-  <script
-    type="module"
-    src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-  ></script>
-  <script
-    nomodule
-    src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-  ></script>
+<!-- adding library jquery-->
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="app.js"></script>
 
-  <!-- adding library jquery-->
-  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-  <script src="app.js"></script>
 </html>
