--- a/aboutUs.html
+++ b/aboutUs.html
@@ -1,109 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="about.css" />
 
-    <!-- adding font-->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="about.css" />
 
-    <title>Hire Me</title>
-  </head>
-  <body>
-    <!--side bar-->
-    <div class="sidebar">
-      <h1 class="logo">HireMe</h1>
-      <div class="menu">
-        <a href="index.html"><ion-icon name="home-outline"></ion-icon>Home</a>
-        <a href="404.html"
-          ><ion-icon name="newspaper-outline"></ion-icon>Find Jobs</a
-        >
-        <a href="404.html"
-          ><ion-icon name="stats-chart-outline"></ion-icon>Performance</a
-        >
-        <a href="bookmark.html"
-          ><ion-icon name="bookmarks-outline"></ion-icon>Bookmarks</a
-        >
-        <a href="404.html"
-          ><ion-icon name="mail-unread-outline"></ion-icon>Messages</a
-        >
-        <a href="aboutUs.html"
-          ><ion-icon name="information-circle-outline"></ion-icon>About Us</a
-        >
-      </div>
+  <!-- adding font-->
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet" />
 
-      <!-- Adding Profile-->
-      <div class="profile">
-        <img class="profile-img" src="images/woman.png" />
-        <div class="profile-name">
-          <a style="text-decoration: none" href="profile.html">Nur Alfi</a>
-          <p>UI Designer</p>
-        </div>
-      </div>
+  <title>Hire Me</title>
+</head>
+
+<body>
+  <!--side bar-->
+  <div class="sidebar">
+    <h1 class="logo">HireMe</h1>
+    <div class="menu">
+      <a href="index.html"><ion-icon name="home-outline"></ion-icon>Home</a>
+      <a href="404.html"><ion-icon name="newspaper-outline"></ion-icon>Find Jobs</a>
+      <a href="404.html"><ion-icon name="stats-chart-outline"></ion-icon>Performance</a>
+      <a href="bookmark.html"><ion-icon name="bookmarks-outline"></ion-icon>Bookmarks</a>
+      <a href="404.html"><ion-icon name="mail-unread-outline"></ion-icon>Messages</a>
+      <a href="aboutUs.html"><ion-icon name="information-circle-outline"></ion-icon>About Us</a>
     </div>
 
-    <div class="container5">
-      <div class="kontentk">
-        <img class="illus" src="images/illus.png" alt="Tunggu Sebentar Yaaa~" />
-        <p class="keterangan">
-          Hire Me Adalah Website iklan Lowongan Pekerjaan yang berguna bagi para
-          pengguna yang sedang mencari pekerjaan. Hire me bisa digunakan oleh
-          pengguna dengan usia 18-40 tahun. kedepannya kami selaku developer
-          akan terus mengembangkan website ini dengan baik dan bisa lebih
-          bermanfaat lagi bagi para pengguna.
-          <br />Jika ada kesalahan informasi, silahkan hubungi kontak kami. kami
-          juga menerima kritik dan saran. <br />jangan lupa terus dukung kami.
-          kurang lebihnya mohon maaf, terima kasih
-        </p>
+    <!-- Adding Profile-->
+    <div class="profile">
+      <img class="profile-img" src="images/woman.png" />
+      <div class="profile-name">
+        <a style="text-decoration: none" href="profile.html">Nur Alfi</a>
+        <p>UI Designer</p>
+      </div>
+    </div>
+  </div>
 
-        <p class="judul">Kontak Kami</p>
+  <div class="container5">
+    <div class="main-header">
+      <ion-icon class="menu-bar" name="menu-outline"></ion-icon>
+    </div>
+    <div class="kontentk">
+      <img class="illus" src="images/illus.png" alt="Tunggu Sebentar Yaaa~" />
+      <p class="keterangan">
+        Hire Me Adalah Website iklan Lowongan Pekerjaan yang berguna bagi para
+        pengguna yang sedang mencari pekerjaan. Hire me bisa digunakan oleh
+        pengguna dengan usia 18-40 tahun. kedepannya kami selaku developer
+        akan terus mengembangkan website ini dengan baik dan bisa lebih
+        bermanfaat lagi bagi para pengguna.
+        <br />Jika ada kesalahan informasi, silahkan hubungi kontak kami. kami
+        juga menerima kritik dan saran. <br />jangan lupa terus dukung kami.
+        kurang lebihnya mohon maaf, terima kasih
+      </p>
 
-        <div class="kartukontak">
-          <div class="kartu kartunama grayosh">
-            <p class="namakn">Farrel Valentino Awewra</p>
-            <div class="icon">
-              <a target="_blank" href="mailto:minjunda23@gmail.com">
-                <img src="images/email60.png" alt="Tunggu Sebentar Yaaa~" />
-              </a>
-              <a target="_blank" href="https://github.com/farrelval">
-                <img src="images/github60.png" alt="Tunggu Sebentar Yaaa~" />
-              </a>
-            </div>
+      <p class="judul">Kontak Kami</p>
+
+      <div class="kartukontak">
+        <div class="kartu kartunama grayosh">
+          <p class="namakn">Farrel Valentino Awewra</p>
+          <div class="icon">
+            <a target="_blank" href="mailto:minjunda23@gmail.com">
+              <img src="images/email60.png" alt="Tunggu Sebentar Yaaa~" />
+            </a>
+            <a target="_blank" href="https://github.com/farrelval">
+              <img src="images/github60.png" alt="Tunggu Sebentar Yaaa~" />
+            </a>
           </div>
+        </div>
 
-          <div class="kartu kartunama grayosh">
-            <p class="namakn">Nur Alfianti Ika Mawarni</p>
-            <div class="icon">
-              <a target="_blank" href="mailto:ikamawarnie253@gmail.com">
-                <img src="images/email60.png" alt="Tunggu Sebentar Yaaa~" />
-              </a>
-              <a target="_blank" href="https://github.com/NurAlfianti">
-                <img src="images/github60.png" alt="Tunggu Sebentar Yaaa~" />
-              </a>
-            </div>
+        <div class="kartu kartunama grayosh">
+          <p class="namakn">Nur Alfianti Ika Mawarni</p>
+          <div class="icon">
+            <a target="_blank" href="mailto:ikamawarnie253@gmail.com">
+              <img src="images/email60.png" alt="Tunggu Sebentar Yaaa~" />
+            </a>
+            <a target="_blank" href="https://github.com/NurAlfianti">
+              <img src="images/github60.png" alt="Tunggu Sebentar Yaaa~" />
+            </a>
           </div>
         </div>
       </div>
     </div>
-  </body>
+  </div>
+</body>
 
-  <!-- adding icon -->
-  <script
-    type="module"
-    src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-  ></script>
-  <script
-    nomodule
-    src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-  ></script>
+<!-- adding icon -->
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-  <!-- adding library jquery-->
-  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-  <script src="app.js"></script>
+<!-- adding library jquery-->
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="app.js"></script>
+
 </html>
