--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <!--side bar-->
-  <div class="sidebar">
+  <div class="sidebar" id="sidebar">
     <h1 class="logo">HireMe</h1>
     <div class="menu">
       <a href="index.html"><ion-icon name="home-outline"></ion-icon>Home</a>
@@ -55,7 +55,7 @@
         <button class="btn-filter" data-target="Data Science">Data Science</button>
         <button class="btn-filter" data-target="Data Engineer">Data Engineer</button>
         <button class="btn-filter" data-target="Data Analyst">Data Analyst</button>
-        <button class="btn-filter" data-target="Data Visualization">Data Visualization</button>
+        <button class="btn-filter" data-target="Product Analyst">Product Analyst</button>
         <button class="btn-filter" data-target="UI UX Designer">UI UX Designer</button>
       </div>
     </div>
@@ -180,7 +180,7 @@
         </div>
       </div>
 
-      <div class="card" data-id="Data Analyst">
+      <div class="card" data-id="Product Analyst">
         <div class="card-left red-bg">
           <img src="images\shopee.png" alt="" />
         </div>
